2A/05_Projet_GL/src/test/deca/context/invalid/complet/50_casting_str_float.deca
// Description :
//   casting : str --> float 
// Resultats :
//    ligne 9 :  casting entre 'float' et 'string' n'est pas possible
// Historique :
//  cree le 16/01/2024

{
    (float)("1.2");
}